Fixing spacing in my input boxes

--- a/Client/src/UI/Input/input.css
+++ b/Client/src/UI/Input/input.css
@@ -35,6 +35,6 @@
 
 @media screen and (max-width: 400px) {
     .input {
-        font-size: 8px;
+        font-size: 16px;
     }
 }
