--- a/Client/src/components/SignIn/signIn.css
+++ b/Client/src/components/SignIn/signIn.css
@@ -9,6 +9,12 @@
     border: 1px solid #374151;
     border-radius: 20px;
     background-color: #1f2937;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
 }
 
 /* Responsive */
